--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^4.0.0
-  firebase_performance: ^0.9.0
+  dio: ^4.0.6
+  firebase_performance: ^0.9.0+7
 
 dev_dependencies:
   flutter_test:
